--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,14 +3,21 @@ version: 0.2
 phases:
   pre_build:
     commands:
+      - docker --version
+      - echo "Checking Docker daemon status..."
+      - docker info
       - echo "Logging in to Amazon ECR..."
       - aws --version
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 954976285887.dkr.ecr.us-east-1.amazonaws.com
+      - echo "Checking Docker images..."
+      - docker images
       - REPOSITORY_URI=954976285887.dkr.ecr.us-east-1.amazonaws.com/dreametrix-ecr
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
+      - ls -la
 
   build:
     commands:
+      - docker build -t $REPOSITORY_URI:latest -f ./Dockerfile .
       - echo "Build started on $(date)"
       - echo "Building the Docker image..."
       - docker build -t $REPOSITORY_URI:latest .
