--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
-    "eslint": "8.49.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "^14.2.23",
@@ -68,6 +67,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "eslint-config-next": "^14.2.23"
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^15.1.7"
   }
 }
