--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -56,8 +57,10 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-redux": "^8.1.3",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
@@ -67,6 +70,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/redux": "^3.5.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.1.7"
   }
