--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.446.0",
     "next": "^14.2.23",
     "next-themes": "^0.3.0",
@@ -71,6 +72,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/redux": "^3.5.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.1.7"
