--- a/package.json
+++ b/package.json
@@ -48,14 +48,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
-    "express": "^4.21.2",
     "framer-motion": "^12.6.3",
     "html-pdf": "^3.0.1",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.446.0",
     "next": "^14.2.23",
     "next-themes": "^0.3.0",
@@ -79,10 +79,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/html-pdf": "^3.0.3",
     "@types/js-cookie": "^3.0.6",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^22.14.0",
     "@types/redux": "^3.5.0",
     "@types/xlsx": "^0.0.35",
