--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
+    "sweetalert2": "^11.19.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
