--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "html-pdf": "^3.0.1",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.446.0",
     "next": "^14.2.23",
     "next-themes": "^0.3.0",
