--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-toast": "^1.2.11",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/date-fns": "^2.5.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
@@ -67,6 +68,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^8.1.3",
     "react-resizable-panels": "^2.1.3",
     "react-toastify": "^11.0.5",
@@ -74,7 +76,7 @@
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
     "sweetalert2": "^11.19.1",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
