--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "nextjs",
   "version": "0.1.0",
   "private": true,
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--experimental-vm-modules' next dev --turbopack",
     "dev:api": "ts-node --project api/tsconfig.api.json api/server.ts",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:api\"",
     "build": "next build",
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "@hookform/resolvers": "^3.9.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -45,6 +46,7 @@
     "@types/date-fns": "^2.5.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "ai": "^4.3.15",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -60,10 +62,12 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.446.0",
-    "next": "^14.2.23",
+    "next": "^15.3.2",
     "next-themes": "^0.3.0",
+    "openai": "^4.98.0",
     "playwright-chromium": "^1.51.1",
     "postcss": "8.4.30",
+    "postcss-nesting": "^13.0.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
