--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "NODE_OPTIONS='--experimental-vm-modules' next dev --turbopack",
+    "dev": "NODE_OPTIONS='--experimental-vm-modules' next dev --turbo",
     "dev:api": "ts-node --project api/tsconfig.api.json api/server.ts",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:api\"",
     "build": "next build",
