--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "NODE_OPTIONS='--experimental-vm-modules' next dev --turbo",
+    "dev": "NODE_OPTIONS='--experimental-vm-modules' next dev",
     "dev:api": "ts-node --project api/tsconfig.api.json api/server.ts",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:api\"",
     "build": "next build",
@@ -43,6 +43,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-table": "^8.21.3",
     "@types/date-fns": "^2.5.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
