--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.12.1",
-    "html-pdf": "^3.0.1",
+    "html-pdf": "^1.5.0",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
@@ -65,7 +65,7 @@
     "next-themes": "^0.3.0",
     "openai": "^4.98.0",
     "playwright-chromium": "^1.51.1",
-    "postcss": "8.4.30",
+    "postcss": "^8.5.3",
     "postcss-nesting": "^13.0.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -78,7 +78,7 @@
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
-    "sweetalert2": "^11.19.1",
+    "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
