--- a/package.json
+++ b/package.json
@@ -67,11 +67,14 @@
     "playwright-chromium": "^1.51.1",
     "postcss": "^8.5.3",
     "postcss-nesting": "^13.0.1",
+    "re-resizable": "^6.11.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.5.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-resizable-panels": "^2.1.3",
     "react-toastify": "^11.0.5",
