--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "postcss-nesting": "^13.0.1",
     "re-resizable": "^6.11.2",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.19.2",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
@@ -94,6 +95,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/jspdf": "^1.3.3",
     "@types/node": "^22.14.0",
+    "@types/react-big-calendar": "^1.16.2",
     "@types/redux": "^3.5.0",
     "@types/xlsx": "^0.0.35",
     "concurrently": "^8.2.1",
