--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.34.2",
     "sonner": "^1.5.0",
     "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.6.0",
