--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@genkit-ai/googleai": "^1.12.0",
     "@hookform/resolvers": "^3.9.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -95,6 +96,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/html-pdf": "^3.0.3",
     "@types/js-cookie": "^3.0.6",
     "@types/jspdf": "^1.3.3",
@@ -103,6 +105,7 @@
     "@types/redux": "^3.5.0",
     "@types/xlsx": "^0.0.35",
     "concurrently": "^8.2.1",
+    "dotenv": "^16.5.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.1.7",
     "ts-node": "^10.9.2",
