--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.12.1",
+    "genkit": "^1.12.0",
     "html-pdf": "^1.5.0",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
