--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@genkit-ai/googleai": "^1.12.0",
     "@hookform/resolvers": "^3.9.0",
     "@next/swc-wasm-nodejs": "13.5.1",
+    "@opentelemetry/exporter-jaeger": "^2.0.1",
+    "@opentelemetry/instrumentation": "^0.202.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -53,6 +55,7 @@
     "@types/react-dom": "18.2.7",
     "ai": "^4.3.15",
     "autoprefixer": "10.4.15",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -65,7 +68,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.446.0",
-    "next": "^15.3.3",
+    "next": "^14.2.26",
     "next-themes": "^0.3.0",
     "openai": "^4.98.0",
     "playwright-chromium": "^1.51.1",
@@ -79,7 +82,7 @@
     "react-draggable": "^4.4.6",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.5.2",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-resizable-panels": "^2.1.3",
     "react-toastify": "^11.0.5",
@@ -96,6 +99,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/dotenv": "^6.1.1",
     "@types/html-pdf": "^3.0.3",
     "@types/js-cookie": "^3.0.6",
@@ -104,11 +108,15 @@
     "@types/react-big-calendar": "^1.16.2",
     "@types/redux": "^3.5.0",
     "@types/xlsx": "^0.0.35",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "concurrently": "^8.2.1",
     "dotenv": "^16.5.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.1.7",
+    "handlebars": "^4.7.8",
+    "handlebars-loader": "^1.7.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "webpack": "^5.99.9"
   }
 }
