--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/react-dom": "18.2.7",
     "ai": "^4.3.15",
     "autoprefixer": "10.4.15",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
