--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.12.1",
     "html-pdf": "^3.0.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
@@ -86,7 +88,7 @@
     "react-redux": "^8.1.3",
     "react-resizable-panels": "^2.1.3",
     "react-toastify": "^11.0.5",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.4",
     "redux-persist": "^6.0.0",
     "sharp": "^0.34.2",
     "sonner": "^1.5.0",
@@ -101,6 +103,7 @@
   "devDependencies": {
     "@types/axios": "^0.9.36",
     "@types/dotenv": "^6.1.1",
+    "@types/file-saver": "^2.0.7",
     "@types/html-pdf": "^3.0.3",
     "@types/js-cookie": "^3.0.6",
     "@types/jspdf": "^1.3.3",
