--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "file-saver": "^2.0.5",
-    "framer-motion": "^12.12.1",
+    "framer-motion": "^12.20.5",
     "html-pdf": "^3.0.1",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
@@ -76,6 +76,7 @@
     "playwright-chromium": "^1.51.1",
     "postcss": "^8.5.3",
     "postcss-nesting": "^13.0.1",
+    "quill": "^2.0.3",
     "re-resizable": "^6.11.2",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.2",
