--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-draggable": "^4.4.6",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-resizable-panels": "^2.1.3",
