--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-table": "^8.21.3",
+    "@tremor/react": "^3.18.7",
     "@types/date-fns": "^2.5.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
