--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "recharts": "^2.15.4",
     "redux-persist": "^6.0.0",
     "sharp": "^0.34.3",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.6.0",
