--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/date-fns": "^2.5.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@use-gesture/react": "^10.3.1",
     "ai": "^4.3.15",
     "algoliasearch": "^4.25.2",
     "autoprefixer": "10.4.15",
