--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
     "next": "^14.2.26",
     "next-themes": "^0.3.0",
