--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-instantsearch-dom": "^6.40.4",
+    "react-joyride": "^2.9.3",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-resizable-panels": "^2.1.3",
