--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "re-resizable": "^6.11.2",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.2",
+    "react-cropper": "^2.3.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
